--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "bestmomo/laravel5-artisan-language": "^0.1.2",
         "creativeorange/gravatar": "^1.0",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
